tests/NormalTests/paczka1/small_fuzzy/86094312.err
Error in line 4: i4rCm A416 82,3
Error in line 12: A534 A416 -4,6
Error in line 11: chcCYFcR6j A299 83,7
Error in line 7: jmtYh7dRwL2 A534 214,3
